# ChangeLog for app-portage/trickyfetch
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header $

*trickyfetch-6.5 (08 Apr 2012)

  15 Apr 2012; Martin Väth <martin@mvath.de>
  Inherit base

  08 Apr 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*trickyfetch-6.4 (05 Apr 2012)

  05 Apr 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*trickyfetch-6.3 (12 Mar 2012)

  19 Mar 2012; Martin Väth <martin@mvath.de>
  Use vcs-snapshot.eclass

  12 Mar 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*trickyfetch-6.2 (28 Feb 2012)

  28 Feb 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*trickyfetch-6.1 (08 Jan 2012)

  08 Jan 2012; Martin Väth <martin@mvath.de>
  Version bump. Never proceed after LOCALFETCHCOMMAND.

*trickyfetch-6.0 (06 Jan 2012)

  06 Jan 2012; Martin Väth <martin@mvath.de>
  New ebuild from scratch.