@@ -1,1 +1,1 @@
-DIST trickyfetch-6.5.tar.gz 9048 RMD160 6e4f119a77f9e0c1710b9c77605455f4b5c7e072 SHA1 5dcb5cd3b5b46383176084ebe136b73b683e992a SHA256 3145c649272bd33434d01a2f453b22d702f968f50f52db774a1363f9abab5af3
+DIST trickyfetch-6.6.tar.gz 9052 RMD160 3b7909c64f4af1456bcfc535484ea047a5bab93a SHA1 4527302a9b3f154b04be44832eb47d196f0f63f2 SHA256 b3885707f855fe5102f5c79d1c3c7cab7c74775848d588b06e8b3a3e377776fc
