@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*trickyfetch-6.6 (19 Apr 2012)
+
+  19 Apr 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild.
+
 *trickyfetch-6.5 (08 Apr 2012)
 
   15 Apr 2012; Martin Väth <martin@mvath.de>
